--- a/.forestry/front_matter/templates/social-link.yml
+++ b/.forestry/front_matter/templates/social-link.yml
@@ -3,6 +3,8 @@ hide_body: true
 is_partial: false
 fields:
 - type: field_group_list
+  name: Social_Links
+  label: Social Links
   fields:
   - type: text
     name: name
