--- a/.forestry/front_matter/templates/social-link.yml
+++ b/.forestry/front_matter/templates/social-link.yml
@@ -3,7 +3,7 @@ hide_body: true
 is_partial: false
 fields:
 - type: field_group_list
-  name: Social_Links
+  name: links
   label: Social Links
   fields:
   - type: text
